# DumpToVTK

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  OutputVTK.cpp  OutputVTK.h  README.md  compile.sh  dumpfile.cpp  dumpfile.hpp  geofile.cpp  main.cpp  outputvtks.cpp  outputvtks.hpp  properties.cpp  properties.hpp  wrapped.hpp
src/: dumpfile.cpp  geofile.cpp  geofile.hpp  main.cpp  outputvtks.cpp  wrapped.hpp
test/: cilia1000.in  ciliacarrier.dump  particlecarrier.dump
